Preparing couple solutions of next/previous buttons.

--- a/app/src/main/res/drawable/button_rounded_corners.xml
+++ b/app/src/main/res/drawable/button_rounded_corners.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:padding="@dimen/padding_ten">
-    <solid android:color="@color/defaultBlack"/>
-    <corners android:radius="@dimen/radius_corners"/>
+    android:padding="@dimen/padding_ten"
+    android:shape="rectangle">
+    <solid android:color="@color/defaultBlack" />
+    <corners android:radius="@dimen/radius_corners" />
 </shape>
