--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -32,11 +32,11 @@
     <dimen name="command_padding_top">25dp</dimen>
     <dimen name="command_padding_bottom">10dp</dimen>
 
-    <dimen name="answers_margin_left">20dp</dimen>
-    <dimen name="answers_length_margin_left">40dp</dimen>
+    <dimen name="answer_text_size">16sp</dimen>
+    <dimen name="answer_margin_left">20dp</dimen>
+    <dimen name="answer_margin_top">2dp</dimen>
 
     <!-- "Next" button -->
-    <dimen name="next_button_margin_top">120dp</dimen>
-    <dimen name="next_button_margin_right">20dp</dimen>
-    <dimen name="next_button_margin_bottom">20dp</dimen>
+    <dimen name="button_switch_margin_top">80dp</dimen>
+    <dimen name="button_switch_margin_bottom">20dp</dimen>
 </resources>
