Added references to next/previous buttons.

--- a/app/src/main/res/layout/activity_first_step.xml
+++ b/app/src/main/res/layout/activity_first_step.xml
@@ -57,28 +57,9 @@
         android:layout_height="wrap_content">
 
         <ImageButton
-            android:src="@drawable/left"
+            android:src="@drawable/arrow_right"
             android:background="@null"
-            android:scaleType="fitCenter"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp" />
-        <!--android:background="@drawable/button_switch_rounded"-->
-        <!--android:paddingRight="2dp"/>-->
-
-        <ImageButton
-            android:src="@drawable/right"
-            android:background="@null"
-            android:scaleType="fitCenter"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="10dp" />
-        <!--android:background="@drawable/button_switch_rounded"-->
-        <!--android:paddingLeft="2dp"-->
+            style="@style/button_switch_next" />
 
         <!--<ImageButton-->
         <!--android:src="@drawable/arrow_left"-->
