--- a/app/src/main/res/layout/activity_third_step.xml
+++ b/app/src/main/res/layout/activity_third_step.xml
@@ -18,28 +18,13 @@
         style="@style/commands" />
 
     <ImageButton
-        android:src="@drawable/left"
+        android:src="@drawable/arrow_left"
         android:background="@null"
-        android:scaleType="fitCenter"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp" />
-    <!--android:background="@drawable/button_switch_rounded"-->
-    <!--android:paddingRight="2dp"/>-->
+        style="@style/button_switch_back" />
 
     <ImageButton
-        android:src="@drawable/right"
+        android:src="@drawable/arrow_right"
         android:background="@null"
-        android:scaleType="fitCenter"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp" />
-
-    <!--android:background="@drawable/button_switch_rounded"-->
-    <!--android:paddingLeft="2dp"-->
+        style="@style/button_switch_next" />
 
 </LinearLayout>
