--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,6 +82,7 @@
         <item name="android:scaleType">fitCenter</item>
         <item name="android:layout_marginTop">@dimen/button_switch_margin_top</item>
         <item name="android:layout_marginBottom">@dimen/button_switch_margin_bottom</item>
+        <item name="android:layout_below">@id/view_flipper</item>
     </style>
 
     <style name="button_switch_back" parent="button_switch_step">
