--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -22,7 +22,22 @@
     <dimen name="start_button_margin_top">80dp</dimen>
 
     <!-- Main Layout -->
-    <!-- "Right column" of this layout -->
+    <!-- "Left column" with progress bar -->
+    <!-- Bookmark image -->
+    <dimen name="bookmark_height">100dp</dimen>
+    <dimen name="bookmark_margin_bottom">12dp</dimen>
+
+    <!-- Step number images -->
+    <dimen name="number_size">50dp</dimen>
+    <dimen name="number_margin_left">10dp</dimen>
+    <dimen name="number_margin_right">10dp</dimen>
+    <dimen name="number_margin_bottom">35dp</dimen>
+
+    <!-- Dashed line -->
+    <dimen name="line_width">80dp</dimen>
+    <dimen name="line_height">5dp</dimen>
+
+    <!-- "Right column" which includes strings and buttons -->
     <dimen name="width_of_border">180dp</dimen>
     <dimen name="height_of_border">2dp</dimen>
     <dimen name="padding_top_border">5dp</dimen>
