--- a/app/src/main/res/layout/activity_main_layout.xml
+++ b/app/src/main/res/layout/activity_main_layout.xml
@@ -19,83 +19,7 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <!-- Testing progress bar => straight line with no pattern -->
-            <!--<RelativeLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content">-->
-
-            <!--<View-->
-            <!--android:layout_width="2dp"-->
-            <!--android:layout_height="420dp"-->
-            <!--android:background="#000"-->
-            <!--android:layout_centerHorizontal="true" />-->
-
-            <!--<ImageView-->
-            <!--android:id="@+id/test_one"-->
-            <!--android:src="@drawable/bookmarker"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="100dp"-->
-            <!--android:layout_marginBottom="12dp"-->
-            <!--android:scaleType="fitCenter"-->
-            <!--android:adjustViewBounds="true"-->
-            <!--android:layout_centerHorizontal="true" />-->
-
-            <!--<ImageView-->
-            <!--android:id="@+id/test_two"-->
-            <!--android:src="@drawable/one_active"-->
-            <!--android:layout_width="50dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:layout_marginLeft="10dp"-->
-            <!--android:layout_marginRight="10dp"-->
-            <!--android:scaleType="fitCenter"-->
-            <!--android:adjustViewBounds="true"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_below="@id/test_one" />-->
-
-            <!--<ImageView-->
-            <!--android:id="@+id/test_three"-->
-            <!--android:src="@drawable/two_inactive"-->
-            <!--android:layout_width="50dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="40dp"-->
-            <!--android:layout_marginLeft="10dp"-->
-            <!--android:layout_marginRight="10dp"-->
-            <!--android:scaleType="fitCenter"-->
-            <!--android:adjustViewBounds="true"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_below="@+id/test_two" />-->
-
-            <!--<ImageView-->
-            <!--android:id="@+id/test_four"-->
-            <!--android:src="@drawable/three_inactive"-->
-            <!--android:layout_width="50dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="40dp"-->
-            <!--android:layout_marginLeft="10dp"-->
-            <!--android:layout_marginRight="10dp"-->
-            <!--android:scaleType="fitCenter"-->
-            <!--android:adjustViewBounds="true"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_below="@+id/test_three" />-->
-
-            <!--<ImageView-->
-            <!--android:id="@+id/test_five"-->
-            <!--android:src="@drawable/four_inactive"-->
-            <!--android:layout_width="50dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="40dp"-->
-            <!--android:layout_marginLeft="10dp"-->
-            <!--android:layout_marginRight="10dp"-->
-            <!--android:layout_marginBottom="40dp"-->
-            <!--android:scaleType="fitCenter"-->
-            <!--android:adjustViewBounds="true"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_below="@+id/test_four" />-->
-
-            <!--</RelativeLayout>-->
-
-            <!--Testing progress bar - dashed line-->
+            <!--Progress bar with dashed line-->
             <ImageView
                 android:id="@+id/bookmark"
                 android:src="@drawable/bookmark"
